--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,7 +7,26 @@
   --color-dark: #000;
   --color-light: #fff;
 }
+body.light{
+  --background-color: #fff;
+  --foreground-color: #000;
+  --background-color-rgb: 255,255,255;
+  --foreground-color-rgb: 0,0,0;
 
+
+}
+body.dark{
+  --background-color: #000;
+  --foreground-color: #fff;
+  --background-color-rgb: 0,0,0;
+  --foreground-color-rgb: 255,255,255;
+
+
+}
+body{
+  background-color: var(--background-color);
+  color: var(--foreground-color);
+}
 img {
   border-radius: 4px;
 }
@@ -28,7 +47,8 @@ img {
 * --------------------------------------------------
 */
 aside {
-  background: var(--color-light);
+  background: var(--background-color);
+  color: var(--foreground-color);
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
   height: 100vh;
   max-width: var(--aside-width);
@@ -41,7 +61,7 @@ aside {
 
 aside header {
   align-items: center;
-  border-bottom: 1px solid var(--color-dark);
+  border-bottom: 1px solid var(--foreground-color);
   display: flex;
   height: var(--header-height);
   justify-content: space-between;
@@ -159,7 +179,8 @@ button.reset:hover:not(:has(> *)) {
 */
 .header {
   align-items: center;
-  background: #fff;
+  background: var(--background-color);
+  color: var(--foreground-color);
   display: flex;
   height: var(--header-height);
   padding: 0 1rem;
@@ -168,6 +189,11 @@ button.reset:hover:not(:has(> *)) {
   z-index: 1;
 }
 
+.header button{
+  background: var(--background-color);
+  color: var(--foreground-color);
+
+}
 .header-menu-mobile-toggle {
   @media (min-width: 48em) {
     display: none;
@@ -358,7 +384,7 @@ button.reset:hover:not(:has(> *)) {
   grid-gap: 1.5rem;
   grid-template-columns: repeat(2, 1fr);
   @media (min-width: 45em) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -397,9 +423,10 @@ button.reset:hover:not(:has(> *)) {
 
 .products-grid {
   display: grid;
-  grid-gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(var(--grid-item-width), 1fr));
+  grid-gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
   margin-bottom: 2rem;
+  padding: 0 5em;
 }
 
 .product-item img {
@@ -413,13 +440,14 @@ button.reset:hover:not(:has(> *)) {
 * --------------------------------------------------
 */
 .product {
-  display: grid;
-  @media (min-width: 45em) {
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 4rem;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
+.product>*{
+  width: 80%;
+  margin: auto;
+}
 .product h1 {
   margin-top: 0;
 }
@@ -467,7 +495,16 @@ button.reset:hover:not(:has(> *)) {
 .product-option-label-swatch img {
   width: 100%;
 }
-
+.product-image-gallery{
+  width: 100%;
+  height: 40vh;
+  position: relative;
+}
+.product-image-gallery img{
+  position: absolute;
+  width: auto;
+  height: 100%;
+}
 /*
 * --------------------------------------------------
 * routes/blog._index.tsx
