--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -14,6 +14,15 @@ body {
   margin: 0;
   padding: 0;
 }
+body.light{
+  --background-color: #fff;
+  --foreground-color: #000;
+
+}
+body.dark{
+  --background-color: #000;
+  --foreground-color: #fff;
+}
 
 h1,
 h2,
@@ -53,7 +62,7 @@ p {
 }
 
 a {
-  color: #000;
+  color: var(--foreground-color);
   text-decoration: none;
 }
 
