--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -455,14 +455,14 @@ button.reset:hover:not(:has(> *)) {
   flex-direction: column;
   align-items: center;
 }
-.product>*{
-  width: 80%;
-  margin: auto;
-}
 .product h1 {
   margin-top: 0;
 }
-
+.product-description ul{
+  list-style-type: disc;
+  list-style: disc;
+  padding-inline-start: 20px;
+}
 .product-image img {
   height: auto;
   width: 100%;
