--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -190,6 +190,10 @@ body{
 body.dark .cart-icon{
   filter: invert();
 }
+.dark .product-item .text-center,.dark .product-item hr{
+  display: none;
+}
+
 body{
   background-color: var(--background-color);
   color: var(--foreground-color);
